--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,68 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
 
 * {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
   font-family: "Nunito", sans-serif;
+}
+
+.main-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
+  color: white;
+  background-color: rgb(2, 21, 38);
+}
+
+.form-content-container {
+  display: flex;
+  gap: 10px;
+}
+
+#submit {
+  width: 100px;
+  border-style: none;
+  color: white;
+  background-color: rgb(91, 142, 181);
+}
+
+#submit:hover {
+  cursor: pointer;
+}
+
+#submit:active {
+  background-color: rgb(63, 98, 125);
+}
+
+.main-content-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+}
+
+.forecast-table {
+  width: 75vw;
+}
+
+thead > tr > th, tbody > tr > td {
+  text-align: center;
+  padding: 10px;
+}
+
+thead > tr > th {
+  color: white;
+  background-color: rgb(80, 80, 80);
+}
+
+tbody > tr:nth-child(odd) {
+  background-color: rgb(200, 200, 200);
+}
+
+tbody > tr:nth-child(even) {
+  background-color: rgb(160, 159, 159);
 }
