--- a/src/styles.css
+++ b/src/styles.css
@@ -42,11 +42,31 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: rgb(2, 21, 38);
+  height: 100vh;
   gap: 100px;
+}
+
+.weather-today {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: lightgoldenrodyellow;
 }
 
 .forecast-table {
   width: 75vw;
+}
+
+caption {
+  color: white;
+  font-size: 28px;
+  padding-bottom: 10px;
+}
+
+thead {
+  padding-top: 10px;
 }
 
 thead > tr > th, tbody > tr > td {
@@ -65,4 +85,8 @@ tbody > tr:nth-child(odd) {
 
 tbody > tr:nth-child(even) {
   background-color: rgb(160, 159, 159);
+}
+
+.hidden {
+  display: none;
 }
